<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yamba 1</string>
    <string name="titleYamba">Yamba</string>
    
    <string name="hintText">Please enter your 140-character status</string>
    <string name="buttonUpdate">Update</string>
    
    <string name="titleStatus">Status Update</string>
    <string name="titlePrefs">Preferences</string>
    <string name="titleUsername">Username</string>
    <string name="titlePassword">Password</string>
    <string name="titleApiRoot">API Root</string>
    
    <string name="summaryUsername">Please enter your username</string>
    <string name="summaryPassword">Please enter your password</string>
    <string name="summaryApiRoot">URL of Root API for your service</string>
    
    <string name="itemPrefs">ItemPrefs</string>
    <string name="titleServiceStart">titleServiceStart</string>
    <string name="titleServiceStop">titleServiceStop</string>
    
    <string name="titleTimeline">Timeline</string>
    <string name="msgSetupPrefs">Insert a username valid</string>
    <string name="titlePurge">Title Purge</string>
    
</resources>
